feat(sstable): end-to-end integrity on v5 format (WD-03)
Implements sstable.end-to-end-integrity spec v4 APPROVED → v5 DRAFT.
Adds per-block VarInt prefix, per-section CRC32C, 112-byte footer with
self-checksum (magic-inclusive), atomic commit, recovery scan, reader
FAILED state, and R38 concurrency contract.

Spec evolution:
- v2 DRAFT → v4 APPROVED via spec-author Pass 2 (32 findings) + Pass 3
  (11 findings); all critical + high + medium applied
- v4 APPROVED → v5 DRAFT via post-implementation audit: 13 new Rs
  (R44-R56), 4 refinements (R37/R38/R39/R43), 2 open obligations

5 new constructs:
- jlsm.sstable.CorruptSectionException (exported)
- jlsm.sstable.IncompleteSSTableException (exported)
- jlsm.sstable.FsyncSkipListener (exported)
- jlsm.sstable.internal.VarInt (LEB128 canonical)
- jlsm.sstable.internal.V5Footer (record + codec)

3 extensions:
- TrieSSTableWriter: v5 write path with VarInt prefix, 3-fsync, atomic
  commit via <final>.partial.<writerId> + Files.move ATOMIC_MOVE
- TrieSSTableReader: magic-first dispatch, footer self-CRC, section
  CRC32C, reader FAILED state, recoveryScan, R38 mutex
- SSTableFormat: MAGIC_V5 + FOOTER_SIZE_V5 constants

20 bugs fixed by audit round-001:
- concurrency (6): recoveryScan race, iterator lock-leak, torn publish,
  close coordination, R43 transition unimplemented, ctor-failure unwind
- contract_boundaries (3): writeFooterV5 guards, tight-pack lower bound,
  recovery silent CRC-bypass
- data_transformation (8): commit semantics, v5 CRC gated on legacy flag,
  oversized-entry IOException, dictBufferedBytes reset, int-narrowing
  guards, empty-bloom guard, readBytes bounds
- dispatch_routing (3): V5→legacy magic bypass, legacy CorruptSection
  wrapping, expectedVersion opt-in

137+ feature tests + ~25 audit adversarial tests. Full jlsm-core suite
1491 tests green. spotlessCheck + checkstyle clean.

Known gaps:
- Spec v5 remains DRAFT (needs /spec-verify to promote)
- 4 @Disabled tests require infrastructure (Jimfs, cha